cicd_results_integration.txt
============================= test session starts =============================
platform win32 -- Python 3.12.5, pytest-8.4.1, pluggy-1.5.0 -- C:\Python312\python.exe
cachedir: .pytest_cache
hypothesis profile 'default'
Using --randomly-seed=1434017266
rootdir: C:\Users\17175\Desktop\AIVillage
plugins: anyio-4.4.0, Faker-18.13.0, hypothesis-6.138.2, asyncio-1.1.0, cov-6.0.0, env-1.1.5, flask-1.3.0, mock-3.14.0, randomly-3.16.0, timeout-2.3.1, xdist-3.6.1
asyncio: mode=Mode.STRICT, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 0 items / 3 errors / 2 skipped

=================================== ERRORS ====================================
__ ERROR collecting tests/integration/agent_forge/test_fog_burst_shutdown.py __
ImportError while importing test module 'C:\Users\17175\Desktop\AIVillage\tests\integration\agent_forge\test_fog_burst_shutdown.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\integration\agent_forge\test_fog_burst_shutdown.py:5: in <module>
    from packages.agent_forge.integration.fog_burst import FogBurstOrchestrator
E   ModuleNotFoundError: No module named 'packages.agent_forge.integration'
_ ERROR collecting tests/integration/fog/test_marketplace_billing_integration.py _
ImportError while importing test module 'C:\Users\17175\Desktop\AIVillage\tests\integration\fog\test_marketplace_billing_integration.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\integration\fog\test_marketplace_billing_integration.py:17: in <module>
    from packages.fog.edge.beacon import CapabilityBeacon, DeviceType, PowerProfile
E   ModuleNotFoundError: No module named 'packages.fog'
_____ ERROR collecting tests/integration/fog/test_marketplace_matching.py _____
..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
..\..\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:359: in _rewrite_test
    co = compile(tree, strfn, "exec", dont_inherit=True)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E     File "C:\Users\17175\Desktop\AIVillage\tests\integration\fog\test_marketplace_matching.py", line 105
E       return await _create_listings()
E              ^^^^^^^^^^^^^^^^^^^^^^^^
E   SyntaxError: 'await' outside async function
=========================== short test summary info ===========================
ERROR tests/integration/agent_forge/test_fog_burst_shutdown.py
ERROR tests/integration/fog/test_marketplace_billing_integration.py
ERROR tests/integration/fog/test_marketplace_matching.py
!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 3 failures !!!!!!!!!!!!!!!!!!!!!!!!!!
======================== 2 skipped, 3 errors in 0.92s =========================
